--- a/copter/src/shmdef.h.template
+++ b/copter/src/shmdef.h.template
@@ -1,3 +1,3 @@
 #pragma once
 
-constexpr int NUM_SHM_VARS = $!sum(len(g) for g in shm)!$;
+constexpr int NUM_SHM_VARS = $!sum(len(shm[g_name]) for g_name in shm)!$;
