--- a/copter/platformio.ini
+++ b/copter/platformio.ini
@@ -4,7 +4,7 @@
 # Please make sure to read documentation with examples first
 # http://docs.platformio.org/en/stable/projectconf.html
 #
-[env:teensy31]
+[env:drone]
 platform = teensy
 framework = arduino
 board = teensy31
