--- a/handheld/platformio.ini
+++ b/handheld/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+[env:handheld]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
